refactor: consolidate analysis contracts and verification tooling